Fix stage overview alignment after introduction of manual stage trigger

--- a/server/src/main/webapp/WEB-INF/rails/webpack/views/dashboard/stage_overview/index.scss
+++ b/server/src/main/webapp/WEB-INF/rails/webpack/views/dashboard/stage_overview/index.scss
@@ -70,7 +70,7 @@ $building: #ffc11b;
 
 .stage-overview-container.align-left {
   &:before {
-    left: 748px;
+    left: 755px;
   }
 }
 
